kubernetes/apps/bookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookshelf
  namespace: bookshelf
  labels:
    app: bookshelf
spec:
  type: ClusterIP
  ports:
    - port: 8787
      targetPort: 8787
      protocol: TCP
      name: http
  selector:
    app: bookshelf
