kubernetes/apps/bookshelf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bookshelf
  namespace: bookshelf
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`books.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: bookshelf
          port: 8787
  tls: {}
